--- a/src/Funtom.Linq.Performance/Funtom.Linq.Performance.fsproj
+++ b/src/Funtom.Linq.Performance/Funtom.Linq.Performance.fsproj
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Funtom.Linq.Csharp\Funtom.Linq.Csharp.csproj" />
     <ProjectReference Include="..\Funtom.Linq\Funtom.Linq.fsproj" />
   </ItemGroup>
 
