update dll discription

--- a/src/Funtom.Linq/Funtom.Linq.fsproj
+++ b/src/Funtom.Linq/Funtom.Linq.fsproj
@@ -13,7 +13,10 @@
 		<PackageTags>midoliy,Linq,fsharp,Funtom</PackageTags>
 		<PackageProjectUrl>https://github.com/tatsuya-midorikawa/Funtom.Linq</PackageProjectUrl>
 		<RepositoryUrl>https://github.com/tatsuya-midorikawa/Funtom.Linq</RepositoryUrl>
-		<Description>.NET wrapper library for F#</Description>
+		<Description>
+			Funtom.Linq is a library for F# that is compatible with System.Linq.
+			This library makes it easier to use pipeline operators and optimizes for FSharp.Core.List and more.
+		</Description>
 		<PackageIcon>phantom.png</PackageIcon>
 		<PackageReadmeFile>README.md</PackageReadmeFile>
   </PropertyGroup>
