--- a/src/Funtom.Linq/Funtom.Linq.fsproj
+++ b/src/Funtom.Linq/Funtom.Linq.fsproj
@@ -30,6 +30,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="SpeedOpt.fs" />
     <Compile Include="Core.fs" />
     <Compile Include="Enumerable.fs" />
     <Compile Include="Span.fs" />
