--- a/src/Funtom.Linq.Performance/Funtom.Linq.Performance.fsproj
+++ b/src/Funtom.Linq.Performance/Funtom.Linq.Performance.fsproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <PackageReference Include="BenchmarkDotNet" Version="0.13.1" />
+    <PackageReference Include="Bogus" Version="34.0.1" />
   </ItemGroup>
 
   <ItemGroup>
