--- a/src/Funtom.Linq/Funtom.Linq.fsproj
+++ b/src/Funtom.Linq/Funtom.Linq.fsproj
@@ -5,10 +5,10 @@
 		<LangVersion>6.0</LangVersion>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-		<Version>0.0.5</Version>
+		<Version>0.0.6</Version>
 		<Authors>midoliy</Authors>
 		<Company>midoliy</Company>
-		<Copyright>© 2021 Tatsuya Midorikawa. All rights rserved</Copyright>
+		<Copyright>© 2021-2022 Tatsuya Midorikawa. All rights rserved</Copyright>
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
 		<PackageTags>midoliy,Linq,fsharp,Funtom</PackageTags>
 		<PackageProjectUrl>https://github.com/tatsuya-midorikawa/Funtom.Linq</PackageProjectUrl>
