--- a/src/Funtom.Linq/Funtom.Linq.fsproj
+++ b/src/Funtom.Linq/Funtom.Linq.fsproj
@@ -38,6 +38,8 @@
     <Compile Include="Iterator\AppendPrepend.fs" />
     <Compile Include="Iterator\Chunk.fs" />
     <Compile Include="Iterator\Concat.fs" />
+    <Compile Include="Iterator\DefaultIfEmpty.fs" />
+    <Compile Include="Iterator\Distinct.fs" />
     <Compile Include="Core.fs" />
     <Compile Include="Span.fs" />
     <Compile Include="Linq.fs" />
