--- a/src/Funtom.Linq/Funtom.Linq.fsproj
+++ b/src/Funtom.Linq/Funtom.Linq.fsproj
@@ -41,6 +41,7 @@
     <Compile Include="Iterator\DefaultIfEmpty.fs" />
     <Compile Include="Iterator\Distinct.fs" />
     <Compile Include="Iterator\ElementAt.fs" />
+    <Compile Include="Iterator\Reverse.fs" />
     <Compile Include="Core.fs" />
     <Compile Include="Span.fs" />
     <Compile Include="Linq.fs" />
