--- a/src/Funtom.Linq/Funtom.Linq.fsproj
+++ b/src/Funtom.Linq/Funtom.Linq.fsproj
@@ -43,6 +43,7 @@
     <Compile Include="Iterator\ElementAt.fs" />
     <Compile Include="Iterator\Reverse.fs" />
     <Compile Include="Iterator\Grouping.fs" />
+    <Compile Include="Iterator\Join.fs" />
     <Compile Include="Core.fs" />
     <Compile Include="Span.fs" />
     <Compile Include="Linq.fs" />
