--- a/src/Funtom.linq/Funtom.linq.fsproj
+++ b/src/Funtom.linq/Funtom.linq.fsproj
@@ -41,6 +41,7 @@
     <Compile Include="Iterator\Grouping.fs" />
     <Compile Include="Iterator\Join.fs" />
     <Compile Include="Iterator\OrderedEnumerable.fs" />
+    <Compile Include="core\Builder.fs" />
     <Compile Include="core\Select.fs" />
     <Compile Include="Core.fs" />
     <Compile Include="Span.fs" />
